# pyxparser

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  environment.yaml  pyproject.toml
src/pyxparser/: __main__.py  __version__.py  cli.py  cli_functions.py  enums.py  logger.py  runner.py
src/pyxparser/defaults/: anarede_mapping.json
src/pyxparser/parser/: __init__.py  anarede.py
tests/: conftest.py  test_anarede_parser.py  test_cli_functions.py  test_conftest.py  test_integration.py  test_logger.py
tests/data/107bus-ac/: d_107barras.pwf
tests/data/107bus-dc/: 107barras_s_se.pwf  107barras_se_s.pwf
tests/data/118bus/: IEEE118.PWF
tests/data/16bus/: d_16barras_Lev.pwf  d_16barras_Med.pwf  d_16barras_Pes.pwf
tests/data/33bus/: d_33barras.pwf
tests/data/65bus/: d_65barras.pwf
tests/data/9bus/: 9barras1.pwf  9barras2.pwf  9barras3.pwf  9barrascc.pwf
tests/data/BR-ACEquiv-sys/: LENA_CASO_FINAL_EQV2020_AC_Full.pwf
tests/data/BR-ACFull-sys/: LEN_A_4_2020_SECO_2023VM_SE_EXP_N_AC_Full.pwf
tests/data/CTEEP-BR-sys/: sistemaCTEEP.pwf
tests/data/RJ-reduced-sys/: sistema_reduzido_RJ.pwf
