[project]
name = "pyxparser"
author = [
    { name = "Marck Llerena", email = "marckcode@gmail.com" },
]
dynamic = ["version"]
description = "ANAREDE parser"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.scripts]
pyxparser = "pyxparser.cli:main"

[dependency-groups]
dev = [
    "pre-commit",
    "black",
    "isort",
    "flake8",
    "mypy",
]

[tool.setuptools.dynamic]
version = {attr = "pyxparser.__version__"}

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target-version = ['py312']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
